trunk/Archive2/bf/083b5376cbcfd7/output
In file included from main.cpp:2:0:
/usr/local/include/c++/4.9.0/type_traits: In instantiation of 'struct std::underlying_type<int>':
main.cpp:7:1:   required by substitution of 'template<class E> typename std::enable_if<std::is_enum<_Tp>::value, typename std::underlying_type<_Tp>::type>::type to_integral(E) [with E = int]'
main.cpp:20:26:   required from here
/usr/local/include/c++/4.9.0/type_traits:1989:38: error: 'int' is not an enumeration type
       typedef __underlying_type(_Tp) type;
                                      ^
